# glm-coding-plan-auto

./: .env.example  .gitignore  COMMANDS.md  README.md  config.yaml  glm_subscriber.spec  pyproject.toml  requirements.txt
glm_subscriber/: __init__.py  __main__.py  browser.py  captcha_capture.py  captcha_solver.py  dom_analyzer.py  main.py  notify.py  ocr_engine.py  orchestrator.py  rapidocr_engine.py  types.py
js/: ycl.js
tests/: test_ocr_offline.py
